--- a/build.gradle
+++ b/build.gradle
@@ -62,3 +62,4 @@ task configureVersion() {
 
 configureVersion.dependsOn clean
 build.dependsOn configureVersion
+build.mustRunAfter configureVersion
